# ft_printf

./: CMakeLists.txt  Makefile  README.md  main.c
Libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_count_if.c  ft_fswap.c  ft_ftoa.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstaddback.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_modf.c  ft_powl.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnstr.c  ft_putstr.c  ft_putstr_fd.c  (+38 more)
include/: ft_printf.h
src/: ft_printf.c  ft_putstr.c  ft_strlen.c  ft_strndup.c  get_spec.c  handle_char.c  handle_float.c  handle_hex.c  handle_integer.c  handle_params.c  handle_pointer.c  handle_string.c  output.c  utils.c
